<resources>
    <string name="app_name" translatable="false">Canvas</string>
    <string name="sky_not_installed">Open Mod Manager and choose Live/Beta/Huawei. Sky is not installed. You must have Sky installed in order to use this!</string>
    <string name="mod_manager">Mod Manager</string>
    <string name="add_mod">Add mod</string>
    <string name="mod_name" translatable="false">%s (%s)</string>
    <string name="mod_invalid">Invalid mod. Missing dependencies?</string>
    <string name="mod_remove_unable">Unable to remove mod</string>
    <string name="mod_remove_deps">You have mods that depend on this mod, please remove them first!</string>
    <string name="mod_remove_dep">%s depends on the mod you are trying to remove</string>
    <string name="mod_ioe">I/O error</string>
    <string name="mod_gf">General fault</string>
    <string name="mod_add_unable">Unable to add mod</string>
    <string name="mod_add_wrongformat">Mod is not readable</string>
    <string name="mod_add_missingdep">Mod depends on %1$s %2$d.%3$d or newer, but it is not available</string>
    <string name="mod_add_exists">A mod under this name already exists</string>
    <string name="mod_version" translatable="false">%d.%d.%d</string>
    <string name="mod_skip_updater">Skip the updater</string>
    <string name="sign_in">Sign in with %s</string>
    <string name="enable_beta">Enable Sky Beta support</string>
    <string name="launch">Play</string>
    <string name="enable_dev">Dev Server</string>
    <string name="wait">Wait</string>
    <string name="updater_checking">Checking for updates…</string>
    <string name="updater_update_available">A new update is available!</string>
    <string name="updater_update_downloading">Downloading…</string>
    <string name="updater_update_downloaded">Downloaded successfully!</string>
    <string name="updater_skip">Skip</string>
    <string name="updater_update">Update</string>
    <string name="updater_install">Install</string>
    <string name="updater_retry">Retry</string>
    <string name="updater_failed">Failed to update</string>
    <string name="updater_input_unreadable">Downloaded data not readable</string>
    <string name="mod_canvas_version" translatable="false">Canvas %s</string>
    <string name="huawei" translatable="false">Huawei</string>
    <string name="beta" translatable="false">Beta</string>
    <string name="live" translatable="false">Live</string>
    <string name="game_not_installed_warning">Game is not installed</string>
    <string name="play">PLAY</string>
    <string name="mods">MODS</string>
    <string name="check_updates_title">Do you want to check if [%1$s] have an update?</string>
    <string name="check_updates_failed_title">Checking Failed</string>
    <string name="updating_failed_title">"Updating Failed"</string>
    <string name="check_updates_message">Note: Update will start if you feel OK.</string>
    <string name="check_button_text">Check</string>
    <string name="version_info" translatable="false">Version: %s\n%s</string>
    <string name="update_dialog_title">%s Has a new update!!</string>
    <string name="install_button_text">Install</string>
    <string name="updater_busy">Updater is busy</string>
    <string name="download_is_going">Download is going</string>
    <string name="up_to_date_title">UP TO DATE</string>
    <string name="up_to_date_message">Current mod is up to date\nVersion: %1$s</string>
    <string name="remove">Remove</string>
    <string name="check_for_updates">Check For Updates</string>
    <string name="switch_hide_canvas_menu">Hide Canvas Menu &amp; Auto Enable Mods</string>
    <string name="switch_skip_updates">Bypass Game Updates</string>
    <string name="enable_cheat_engine_server">Enable Cheat Engine Server</string>
    <string name="switch_custom_server">Enable Custom Server</string>
    <string name="close">Close</string>
    <string name="mod_icon">mod icon</string>
    <string name="no_update_links">No Update Links</string>
    <string name="mod_check_updates_checking">Checking for updates…</string>
    <string name="mod_check_updates_found">Found an update!</string>
    <string name="mod_check_updates_not_found">No updates available.</string>
    <string name="mod_check_updates_downloading">Downloading update…</string>
    <string name="mod_check_updates_installing">Installing update…</string>
    <string name="mod_check_updates_complete">Update complete!</string>
    <string name="mod_check_updates_error">An error has occurred</string>
    <string name="mod_check_offsets_found">### **New offsets are available**</string>
    <string name="offsets_version">**Version:** %1$s</string>
    <string name="offsets_contributors">**Contributors:** %1$s</string>
    <string name="settings_title">SETTINGS</string>
    <string name="sky_attribution">Sky is made by thatgamecompany</string>
    <string name="clear_data_title">⚠️ Clear App Data</string>
    <string name="clear_data_preserved">PRESERVED</string>
    <string name="clear_data_mods" translatable="false">✓  mods/</string>
    <string name="clear_data_accounts" translatable="false">✓  Accounts/</string>
    <string name="clear_data_config" translatable="false">✓  config/</string>
    <string name="clear_data_auth" translatable="false">✓  AccountAuthInfo.bin</string>
    <string name="clear_data_prefs" translatable="false">✓  shared_prefs/user.xml</string>
    <string name="clear_data_deleted">DELETED</string>
    <string name="clear_data_everything_else">✕  Everything else</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="custom_bootloader_title">Custom libBootloader.so</string>
    <string name="pick_file">Pick file</string>
    <string name="pick_file_description">Choose a custom libBootloader.so file from the storage to replace the current bootloader</string>
    <string name="reset_to_original">Reset to original</string>
    <string name="reset_to_original_description">Delete the custom file and re-extract the original from Sky\'s APK</string>
    <string name="dialog_title_placeholder">TITLE</string>
    <string name="dialog_description_placeholder">DESCRIPTION</string>
    <string name="dialog_progress_zero" translatable="false">0%</string>
    <string name="dialog_button_natural" translatable="false">NATURAL</string>
    <string name="launch_google_play">GOOGLE PLAY STORE | GLOBAL VERSION\nPLAY</string>
    <string name="launch_huawei">APP GALLERY | HUAWEI VERSION\nPLAY</string>
    <string name="section_general">General</string>
    <string name="hide_canvas_menu">Hide Canvas menu</string>
    <string name="section_developer_options">Developer Options</string>
    <string name="cheat_engine_server">Cheat Engine Server</string>
    <string name="custom_server">Custom server</string>
    <string name="block_starwatch">Block Starwatch</string>
    <string name="server_url">Server URL</string>
    <string name="server_url_hint" translatable="false">sky.thatskyradiance.duckdns.org</string>
    <string name="enable_logcat_monitoring">Enable Logcat Monitoring</string>
    <string name="section_advanced">Advanced</string>
    <string name="custom_bootloader_setting">Custom libBootloader.so</string>
    <string name="custom_bootloader_setting_desc">Pick a custom bootloader or reset to original</string>
    <string name="clear_app_data">Clear App Data</string>
    <string name="clear_app_data_desc">Delete all data except mods, ThatSkyMod\'s folders and user.xml</string>
    <string name="about_chapter_origin">The Origin</string>
    <string name="about_chapter_origin_sub">Built from scratch by two developers who love Sky.</string>
    <string name="about_chapter_present">The Present</string>
    <string name="about_chapter_present_sub">Currently keeping Canvas alive.</string>
    <string name="about_chapter_team">The Team</string>
    <string name="about_chapter_team_sub">Everyone who made Canvas better.</string>
    <string name="about_chapter_art">The Art</string>
    <string name="about_chapter_art_sub">The faces behind the visuals.</string>
    <string name="about_chapter_community">The Community</string>
    <string name="about_chapter_community_sub">Join thousands of players who use Canvas every day.</string>
    <string name="role_author">Author</string>
    <string name="role_author_retired">Author · retired</string>
    <string name="role_maintainer">Maintainer</string>
    <string name="role_banner_artwork">Banner artwork</string>
    <string name="role_app_icon">App icon</string>
    <string name="community_english_telegram">English Telegram</string>
    <string name="community_russian_telegram">Russian Telegram</string>
    <string name="toast_stack_trace_copied">Stack trace copied to clipboard</string>
    <string name="toast_logcat_enabled">Logcat monitoring enabled</string>
    <string name="toast_logcat_disabled">Logcat monitoring disabled</string>
    <string name="toast_bootloader_reset">Reset applied. Original version will be extracted at the next launch.</string>
    <string name="toast_bootloader_applied">✓ Custom libBootloader.so applied!</string>
    <string name="toast_clearing_data">Clearing data…</string>
    <string name="toast_cleared_data">Cleared %1$d files, %2$d dirs\nRestarting…</string>
    <string name="toast_data_cleared_restarting">Data cleared. Restarting…</string>
    <string name="tab_mods">Mods</string>
    <string name="tab_community">Community</string>
    <string name="community_title">COMMUNITY</string>
    <string name="community_subtitle">Join our Official Communities</string>
    <string name="community_android">Android Community</string>
    <string name="community_pc">PC/Steam/Windows Community</string>
    <string name="join_server">Join</string>
    <string name="members_count">%s members</string>
    <string name="online_count">%s online</string>
    <string name="loading_server">Loading…</string>
    <string name="error_loading_server">Could not load server info</string>
    <string name="import_offsets">Import Offsets</string>
    <string name="onboarding_offsets_title">What are Offsets?</string>
    <string name="onboarding_offsets_body">Offsets are memory addresses used by mods to interact with the game. When the game updates, these addresses change.\n\nImporting updated offset files allows your mods to support newer game versions immediately without waiting for a mod update.</string>
    <string name="offsets_note">Not every mod supports this feature</string>
    <string name="offsets_import_desc">Pick an offset file for this mod</string>
    <string name="offsets_discord_desc">Get help finding offset files</string>
    <string name="onboarding_offsets_message">Offsets are memory addresses used by mods to interact with the game. When the game updates, these addresses change. Importing updated offset files allows your mods to support newer game versions immediately without waiting for a mod update.\n\n<b>NOTE: NOT EVERY MOD SUPPORTS THIS FEATURE.</b>\n\nIf you need help finding offset files, join our Discord server.</string>
    <string name="join_discord">Join Discord</string>
    <string name="select_mod_title">Select Mod</string>
    <string name="offsets_select_mod_desc">Choose which mod to apply the offset file to</string>
    <string name="no_mods_installed">Please install a mod first!</string>
    <string name="overwrite_offsets_title">Overwrite Offsets?</string>
    <string name="overwrite_offsets_message">An offsets file for %1$s already exists. Do you want to overwrite it?</string>
    <string name="toast_offsets_imported">Offsets imported successfully for %1$s</string>
    <string name="toast_offsets_import_failed">Failed to import offsets: %1$s</string>
    <string name="export_data">Export Data (Backup)</string>
    <string name="export_data_desc">Save all mods, configs, and accounts to a .zip file</string>
    <string name="import_data">Import Data (Restore)</string>
</resources>